incopore la seccion skills

--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -12,11 +12,37 @@
         <h1>Mi nombre es<strong> Enrique Viliguer</strong> </h1>
         <h3>Soy Desarrolador Back-End</h3>
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam perferendis doloribus dicta autem odio voluptas quam nobis deleniti, tenetur magnam vitae quia enim alias neque asperiores facilis quae exercitationem a.
+           Me considero una persona Multitasking y autodidacta,apasionado por la tecnologia con muchas ganas de formar parte de un grupo laboral.<br>Soy muy objetivo en mis metas y tareas que me asignen.
+           Trabajo en proyectos desarrollando Api's con sus metodos HTTP.Desarrollo en base de datos relacionales y no relacionales con sus operaciones CRUD.
         </p>
 
         <a href="{% static 'portfolio/Cv-EnriqueViliguer2023.pdf' %}" class="btn btn-primary tbn-lg rounded-0 my-3">Descargar CV</a>
 
+     </div>
+     
+     
+     <div class="col-md-18 my-auto text-center">
+      <h1>
+         Skills
+      </h1>
+       <h2><ins>Lenguajes</ins></h2>
+      
+      <img class="rounded" src="{% static 'portfolio/imgjavascript.jpg' %}" alt="">
+      <img src="{% static 'portfolio/imgpython.jpg' %}" alt="" >
+      <img src="{% static 'portfolio/imgcss.jpg ' %}">
+      <img src="{% static 'portfolio/imgmysql.jpg' %}">
+      <img src="{% static 'portfolio/img-mongodb.jpg' %}">
+      
+      <h2><ins>Framework</ins></h2>
+      <img src="{% static 'portfolio/imgdjango.jpg' %}">
+      <img src="{% static 'portfolio/imgflask.jpg' %}">
+      <img src="{% static 'portfolio/img-bootstrap.jpg' %}">
+
+
+      <h2><ins>Libreria</ins></h2>
+     <img src="{% static 'portfolio/imgreact.jpg' %}">
+   
+      
      </div>
 
 </header>
