--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,10 +1,9 @@
 {% extends 'layout.html' %}
-
 {% block content %}
+        <!--contenido del blog-->
 <div class="text-center">
-   
-   <h2>{{post.title}}</h2>
-   <img src="{{post.image.url}}" alt="{{post.title}}" class="img-fluid" >
+    <h2>{{post.title}}</h2>
+   <img src="{{post.image.url}}" alt="{{post.title}}" class="img-fluid" width="400" >
 
    <p>{{post.description}} </p>
 </div>
