--- a/portfolio/static/main.css
+++ b/portfolio/static/main.css
@@ -1,13 +1,4 @@
-body{
-    background: #090909;
-}
-
-.bg-black{
-    background: #000;
-
-}
-
-.card-project:hover {
-    border:2px solid #ffffff;
-    cursor: pointer;
+body {
+    background: #000000;
+    font-family: 'Silkscreen', sans-serif;
 }
