--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'index.html' %}
 {% block content %}
 {% load static %}
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -60,10 +60,7 @@
         <p>{{project.descripcion}}</p>
       
 
-        {% if project.url %}
-        <a href="{{project.url}}"class="btn btn-light rounded-0 btn-sm" target="_blank" >{{project.url}}</a>
-      
-        {% endif %}
+        
       </div>
    </div>
 
